--- a/week1/index.html
+++ b/week1/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width,initial-scale=1.0">
- <title>Notes Week 1</title>
- <meta name="description" content="~Notes for week 1">
- <link rel="stylesheet" href="">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Week 1</title>
+    <meta name="description" content="~Notes for week 1">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+
+    <head>
+        <h1>Week 1: Questions, Notes, Exercise</h1>
+    </head>
+
+    <main>
+        <h2>Questions</h2>
+        <ul>
+            <li>Why is so important to work with smallest device first?</li>
+        </ul>
+
+        <h2>Exercise</h2>
+        <ul>
+            <li><a href="story-editor.html">Exercise 1: Story Writer</a></li>
+        </ul>
+
+        <h2>Notes</h2>
+        <ul>
+            <p><i>"If you design for the smallest, least powerful device first, then you will focus on the content, and
+                your core functionality. That leads to simple, beautiful apps. If you do it the other way around, it'll
+                be like trying to put a marshmallow into a piggy bank, which is neither simple, nor beautiful."</i> <b>Joel
+                Marsh - The Hipper Element</b></p>
+            <li>Design for mobile first</li>
+            <p><i>"It's really hard to design products by focus groups. A lot of times, people don't know what they want until you show it to them."</i> <b>
+                Steve Jobs - Apple</b></p>
+            <li>Observe what people are doing rather than just what they are saying that they want</li>
+            <li>Reachability is very important - keys in the bottom</li>
+            <li>Do not use pop-ups, especially on mobile sites</li>
+            <li>Make adds small and simple</li>
+            <li>Content first, ads second</li>
+        </ul>
+    </main>
 </body>
+
 </html>
