--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width,initial-scale=1.0">
- <title>David Burguete Portfolio</title>
- <meta name="description" content="~Portfolio class WDD 230 Web Frontend Development II">
- <link rel="stylesheet" href="">
- <script defer src="js/main.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>David Burguete Portfolio</title>
+    <meta name="description" content="~Portfolio class WDD 230 Web Frontend Development II">
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="js/main.js"></script>
 </head>
+
 <body>
-    <h1>WDD 230 Frontend Development II - Portfolio</h1>
-    <ol></ol>
+    <header>
+        <h1>WDD 230 Frontend Development II - Portfolio</h1>
+    </header>
+    <main>
+        <ol></ol>
+    </main>
 </body>
+
 </html>
