--- a/week1/story-editor.html
+++ b/week1/story-editor.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Week 1 notes on readings for WDD 330.">
+        <meta name="description" content="Week 1 Exercise">
         <title>Exercise 1: Story Writer</title>
         <script>
             let loadStory = () => {
