--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Moviepedia</title>
+    <meta name="description" content="Final Project">
 </head>
 
 <body>
@@ -13,8 +14,7 @@
         <button onclick="toggleMenu()"> &#9776; Menu</button>
         <ul id="menu" class="main_menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="form.html">Sign Up</a></li>
         </ul>
     </nav>
     <header>
